--- a/2-2.md
+++ b/2-2.md
@@ -1,3 +1,4 @@
+
 # Tasks for class 2-2
 
 ----
@@ -9,11 +10,11 @@
 - Create an entry for a book you cite often, an article you cite often, and an entry for your own latest talk. Cite those in `bibtest.tex`
 
 ----
-- In `bibtest.tex`, change the bibliography style. Try `authoryear`, `harvard`, `langsci-unified`
+- In `bibtest.tex`, change the bibliography style. Try `nature`, and `science`
 
 ----
 - Create the following outputs: 
-    - "Chomsky 1957"
+    - "Chomsky (1957)"
     - "(Chomsky 1957)
     - "Chomsky (1957: 23)"
     - "(Chomsky 1957: 23)"
