--- a/sampledoc.tex
+++ b/sampledoc.tex
@@ -19,6 +19,8 @@
 \usepackage{langsci-basic}
 \usepackage{langsci-optional}
 \usepackage{pgfplots}
+
+\definecolor{lsRichGreen}{cmyk}{0.6,0,0.9,0.35}
 \begin{document}
 
 \maketitle
@@ -197,7 +199,7 @@ Pellentesque egestas, sem quis elementum gravida, ex diam interdum orci, id vene
 Maecenas et suscipit mauris. Aliquam laoreet, ligula sed ultrices tristique, dolor nisl elementum nisi, sit amet sagittis sapien lacus sed metus. Sed ipsum ligula, consequat ut erat eget, vehicula ultrices purus. Aenean aliquam eu nunc et ultricies. Ut tincidunt mattis ipsum, hendrerit venenatis ipsum sollicitudin eu. Proin egestas purus et elementum posuere. Nunc tempus maximus felis id posuere. Suspendisse scelerisque mauris vitae ligula venenatis, vel fermentum magna laoreet. Ut hendrerit felis dolor, ac cursus nunc commodo vitae.
 
 
-\begin{figure}[h]
+\begin{figure} 
 \includegraphics{akkadian.png}
 \caption{Akkadian script}
 \label{fig:akkadianscript}
@@ -207,7 +209,7 @@ Sed pretium sem sit amet arcu fermentum, sed fringilla nunc volutpat. Nulla temp
 Akkadian script is illustrated in Figure \ref{fig:akkadianscript}
 
 
-\begin{figure}[t]
+\begin{figure} 
 \includegraphics{akkadian.png}~
 \includegraphics{tablet.jpg}
 
@@ -434,7 +436,7 @@ Tên... khátpy ra khuthun tho mo nhy ndo khá than jáwi arak anhi khãm mbaj t
 \exp{ex:john2}
 \gll John gives the book to  Mary \\
      A   ~       ~  T ~ R \\
-\z
+\end{exe}
 
 
 \ea 
@@ -660,42 +662,99 @@ Duis pharetra erat id sapien venenatis, id maximus quam mattis. Curabitur tincid
 \end{tinyitalicsquote}
 
 \section{5-2}
- 
-\begin{tikzpicture}
-  \begin{axis}[
-      xlabel={Party},  
-      ylabel={\%}, 
-      axis lines*=left, 
-      width  = \textwidth,
-      height = .3\textheight,
-      nodes near coords,   
-      ymin=0,
-      xtick={1,2,3,4,5,6,7},
-      xticklabels={CDU,GRUENE,SPD,AFD,FDP,LINKE,OTHER} 
-      ]
-      \addplot[ybar,black!80!black,fill=black] plot coordinates {
-	  (1,30) 
-      }; 
-      \addplot[ybar,green!80!black,fill=green] plot coordinates {
-	  (2,17) 
-      }; 
-      \addplot[ybar,red!80!black,fill=red] plot coordinates {
-	  (3,15) 
-      }; 
-      \addplot[ybar,blue!80!black,fill=blue] plot coordinates {
-	  (4,15) 
-      }; 
-      \addplot[ybar,purple!80!black,fill=purple] plot coordinates {
-	  (5,10) 
-      }; 
-      \addplot[ybar,yellow!80!black,fill=yellow] plot coordinates {
-	  (6,10) 
-      }; 
-      \addplot[ybar,gray!80!black,fill=gray] plot coordinates {
-	  (7,3) 
-      }; 
-  \end{axis} 
-\end{tikzpicture}  
+\begin{figure}
+\centering 
+  \barplot{level}{\%}{non-existent,A1,A2,B1,B2,C1,C2,NS/NSE}{
+    (non-existent,2)
+    (A1,6)
+    (A2,11)
+    (B1,49)
+    (B2,54)
+    (C1,21)
+    (C2,7)
+    (NS/NSE,4)
+  }  
+  \caption{A bar chart}
+\end{figure}
+
+\begin{figure}
+\centering
+  \begin{tikzpicture}
+    \begin{axis}[
+	xlabel={Proficiency level},  
+	ylabel={VOT (ms)}, 
+	axis lines*=left, 
+	width  = .7\textwidth,
+	height = .3\textheight,
+	nodes near coords, 
+	xtick=data,
+	x tick label style={},  
+	ymin=0,
+	ybar,
+	bar width=10mm,
+	enlarge x limits=0.25,
+	symbolic x coords={NES, Low level, High level},
+	legend style={at={(1,0.4)},anchor=west}
+	]
+	\addplot+[ybar,blue!80!black,fill=blue!50!black] plot coordinates {
+	    (NES, 65.47 ) (Low level,  43.27) (High level,60.11 )
+	}; 
+	\addplot+[ybar,green!80!black,fill=green!50!black] plot coordinates {
+	    (NES,65.47 ) (Low level, 47.87) (High level,55.83)
+	}; 
+	\legend{T1, T2}
+    \end{axis} 
+  \end{tikzpicture} 
+  \caption{Grouped bar chart}  
+\end{figure}
+
+\begin{figure}
+\centering
+  \begin{tikzpicture}
+    \begin{axis}[
+	width  = .5\textwidth,
+	height = .6\textheight,
+	ylabel={},
+	xlabel={}, 
+	symbolic y coords={
+	  Lack of content organization,
+	  Lack of thematic content, 
+	  Speaker's storytelling ability, 
+	  Vocabulary, 
+	  Grammar,
+	  Number of silent pauses,  
+	  Repetition of words,
+	  Intonation, 
+	  Rhythm, 
+	  Word stress, 
+	  Pronunciation of vowels and consonants 
+	},   
+	ytick=data,
+	axis lines*=left,  
+	xmin=0,
+	xbar,
+	bar width = 5mm,
+	nodes near coords,
+	nodes near coords align={horizontal},
+	axis on top, 
+    ]    
+    \addplot+[green!80!black,fill=green!60!black] coordinates {%
+    (10,Word stress) 
+    (9,Rhythm) 
+    (11,Pronunciation of vowels and consonants) 
+    (9,Intonation) 
+    (2,Grammar) 
+    (2,Vocabulary)
+    (2,Repetition of words)  
+    (2,Number of silent pauses)
+    (2,Speaker's storytelling ability) 
+    (2,Lack of thematic content) 
+    (1,Lack of content organization) 
+    }; 
+    \end{axis}
+  \end{tikzpicture} 
+  \caption{Horizontal bar chart}
+\end{figure}
 
  
 
