--- a/bibtest.tex
+++ b/bibtest.tex
@@ -3,9 +3,8 @@
 \title{Sample document for bibliographies}
 \usepackage[
 	natbib=true, 
-% 	style=nature,
-% 	style=science,
 	style=biblatex-langsci-unified,	citestyle=langsci-authoryear-comp,
+% 	style=nature,
 	useprefix = true,
 	maxbibnames=99,
 	uniquename=false,
@@ -21,6 +20,10 @@
 ]{biblatex}
 \usepackage{hyperref}
 \addbibresource{mybib.bib}
+
+% \renewcommand{\postnotedelim}{: }%
+% \DeclareFieldFormat{postnote}{#1}% display pages without page prefix (p., pp.)
+
 \begin{document}
 \maketitle 
 \section{Bibliographies}
@@ -45,49 +48,3 @@
 
 \printbibliography 
 \end{document}
-
-# Tasks for class 2-2
-
-----
-- Open the sample document `bibtest.tex`
-- Locate the commands `\citet` and `\citep`
-- Swap the commands and see what happens
-- Open the file `bibtest.bib` and familiarise yourself with the structure
-- Cite some more entries in `bibtest.tex`
-- Create an entry for a book you cite often, an article you cite often, and an entry for your own latest talk. Cite those in `bibtest.tex`
-
-----
-- In `bibtest.tex`, change the bibliography style. Try `nature`, and `science`
-
-----
-- Create the following outputs: 
-    - "Chomsky (1957)"
-    - "(Chomsky 1957)
-    - "Chomsky (1957: 23)"
-    - "(Chomsky 1957: 23)"
-    - "(Chomsky 1957, Everett 2000)"
-    - "Chomsky showed in 1957 ..."
-
-
-----
-- Visit glottolog.org 
-- Choose a language family you like and search it on Glottolog 
-- Retrieve 5 bibliographical entries for that language family and paste them into `bibtest.bib`. Cite those entries in the `bibtest.tex`
-- Make sure capitalisation is correct in the output
-
-    
-----
-- remove a comma from the final line of a bib entry. Recompile and see what happens
-- remove a `}` from a line in `bibtest.bib`, recompile and see what happens  
-- remove the final `}` from a bib entry, recompile and see what happens 
-- Create an entry with the title "Under_scores in practices". Cite that entry in `bibtest.tex`. Recompile and see what happens. 
-- Create an entry with "$\Theta$-roles in practice". Cite that entry in `bibtest.tex`. Recompile and see what happens. 
-- Create an entry with the authors "Juan Pablo Ruiz de Mendoza, John de Ruijter, and Margot van den Berg". Cite that entry. Fix the errors. 
-
-----
-- On your local computer, install one of the following programs and open `bibtest.bib` with it:
-    - JabRef
-    - BibDesk
-    - Zotero
-    
- https://github.com/langsci/latex4linguists/blob/master/3-1.md   
