--- a/3-1.md
+++ b/3-1.md
@@ -1,1 +1,17 @@
+----
+- Create a listing for a "Hello World" snippet in the computer language of your choice
+- Create an aligned conversation transcript with two participants and overlapping speech
+    - use lstlisting 
+    - use the provided styles for conversation analysis
+- Render example (2) of citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.118...
+
+----
+
+- Write "Happy New Year" in Russian, Greek, Chinese, Arabic, Hebrew
+
+- Write "Happy New Year" in IPA
+
+----
+
+
 https://github.com/langsci/latex4linguists/blob/master/3-2.md
