--- a/4-1.md
+++ b/4-1.md
@@ -9,7 +9,7 @@ Tasks for class 4-1
 - create a genealogical classification for Dutch, English, German, Swedish, French, Spanish, Portuguese and superordinate levels as required. 
 
 ---- 
-- Create a metrical representation for "Amanda Palmer"
+- Create a metrical representation for "Bundesarbeitsamtspräsident"
 
 ----
 - Create some tree with movement in your favourite theory
