--- a/5-2.md
+++ b/5-2.md
@@ -1,13 +1,41 @@
 ----
-- visit www.wahlrecht.de
-- create a histogram of the latest German polls
-- *visit www.peil.nl. Create a bar chart of the latest polls (only current numbers)
-- **as above, but include the lighter bars as well. 
-
-----
 - download the pgfplots manual http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf
 - choose some of the plots on pages 78ff of the manual and copypaste the code into your document. Play around.
 
 ----
 - use the package todonote
 - play around with `\todo{}` and `\todo[inline]{}`
+
+----
+- useful structure for a thesis
+
+```
+\documentclass[output=book,nonflat,modfonts,
+  colorlinks,citecolor=brown, 
+%  draft,draftmode,  
+		  ]{langscibook}    
+\input{localmetadata.tex}
+\input{localpackages.tex}
+\input{localhyphenation.tex}
+\addbibresource{localbibliography.bib}
+
+% \includeonly{}
+\begin{document} 
+ 
+\input{localcommands.tex} 
+\maketitle                
+\frontmatter 
+
+\currentpdfbookmark{Contents}{name} % adds a PDF bookmark
+{\sloppy\tableofcontents}
+ \include{chapters/preface}
+ \include{chapters/acknowledgments}
+ \include{chapters/abbreviations} 
+\mainmatter     
+
+\include{chapters/01}  
+
+\sloppy
+\printbibliography
+\end{document} 
+```
