--- a/sampledoc.tex
+++ b/sampledoc.tex
@@ -505,10 +505,13 @@ Hey sis, fresh water,
 \newcommand{\zh}[1]{{\cn #1}} 
 {\cn 新年快乐}
 
-[\textipa{'h\ae pi nju: 'ji5}]
 
- 
-- Write \textit{Happy New Year} in IPA
+- Write \textit{LOTschool, UVA, Amsterdam} in IPA\\{}
+[\textipa{"lO\|[t sxo:l, "y:fa:, Amst@r"\|[dAm}]\\{}
+[\textipa{"lOt sku:l, "u:fa, "\ae mst5d\ae m}]
+
+----
+
 \section{3-2} 
 
 \ea\label{ex:john}
