--- a/Slides-Files/Slides/02-LaTeX_master.tex
+++ b/Slides-Files/Slides/02-LaTeX_master.tex
@@ -4,8 +4,8 @@
 %% Antonio Machicao y Priemer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[a4paper,10pt, bibtotoc]{beamer}
-%\documentclass[a4paper,10pt,handout]{beamer}
+%\documentclass[a4paper,10pt, bibtotoc]{beamer}
+\documentclass[a4paper,10pt,handout]{beamer}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% PACKAGES & COMMANDS 
@@ -22,8 +22,8 @@
 
 \begin{document}
 
-\togglefalse{handout}
-%\toggletrue{handout}
+%\togglefalse{handout}
+\toggletrue{handout}
 
 \input{02-LaTeX_text}
 
