--- a/Slides-Files/Slides/03-LaTeX_master.tex
+++ b/Slides-Files/Slides/03-LaTeX_master.tex
@@ -25,7 +25,7 @@
 \togglefalse{handout}
 %\toggletrue{handout}
 
-\input{01-LaTeX01_text}
+\input{03-LaTeX_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -38,7 +38,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Links \& other sources}
+\section{Quellen}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -48,7 +48,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Links \& other sources}
+\frametitle{Quellen}
 
 {\footnotesize
 	
@@ -65,14 +65,6 @@
 		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
 		{[}Zugriff: 10.10.2017]
 
-		\item Link: KOMA-Script.\\
-		\url{https://www.komascript.de/}\\
-		{[}Zugriff: 02.01.2019]
-
-		\item Link: Overleaf.\\
-		\url{https://www.overleaf.com}\\
-		{[}Zugriff: 02.01.2019]
-		
 		\item Link: \LaTeX /Special Characters.\\
 		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
 		{[}Zugriff: 02.01.2019]
@@ -113,7 +105,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Literature}
+\section{Literatur}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -123,7 +115,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Literature}
+\frametitle{Literatur}
 
 	%German
 %	\bibliographystyle{../../texfiles-beamer/deChicagoMyP}
